# ProDM

./: CMakeLists.txt  README.md  build_script.sh  float2double.py  histogram.ipynb  histogram.py
MGARDx_extend/: decompose.hpp  recompose.hpp  utils.hpp
include/: Synthesizer4GE.hpp  WeightUtils.hpp  nomask_Synthesizer4GE.hpp  ompSZp_typemanager.c  ompSZp_typemanager.h  qoi_utils.hpp
include/MDR/: RefactorUtils.hpp
include/MDR/BitplaneEncoder/: BitplaneEncoder.hpp  BitplaneEncoderInterface.hpp  WeightedNegaBinaryBPEncoder.hpp  WeightedPerBitBPEncoder.hpp  XORNegaBinaryBPEncoder.hpp
include/MDR/Decomposer/: DecomposerInterface.hpp  MGARD.hpp
include/MDR/ErrorCollector/: ErrorCollectorInterface.hpp
include/MDR/ErrorEstimator/: ErrorEstimatorInterface.hpp  MaxErrorEstimator.hpp
include/MDR/Interleaver/: DirectInterleaver.hpp  Interleaver.hpp  InterleaverInterface.hpp  NewInterleaver.hpp
include/MDR/LosslessCompressor/: LevelCompressorInterface.hpp
include/MDR/Reconstructor/: BitplaneReconstructor.hpp  FuseComposedReconstructor.hpp  FuseComposedReconstructor_2D.hpp  NewComposedReconstructor.hpp  NewFuseComposedReconstructor.hpp  Reconstructor.hpp  ReconstructorInterface.hpp  WeightReconstructor.hpp
include/MDR/Refactor/: BitplaneRefactor.hpp  ComposedRefactor.hpp  FuseComposedRefactor.hpp  FuseComposedRefactor_2D.hpp  NewComposedRefactor.hpp  NewFuseComposedRefactor.hpp  QoIRefactor.hpp  Refactor.hpp  RefactorInterface.hpp  WeightRefactor.hpp
include/MDR/Reorganizer/: ReorganizerInterface.hpp
include/MDR/Retriever/: FileRetriever.hpp  RetrieverInterface.hpp
include/MDR/SizeInterpreter/: DPBasedSizeInterpreter.hpp  GreedyBasedSizeInterpreter.hpp  SizeInterpreter.hpp  SizeInterpreterInterface.hpp
include/MDR/Writer/: FileWriter.hpp  WriterInterface.hpp
include/PDR/Approximator/: Approximator.hpp  ApproximatorInterface.hpp  GEApproximator.hpp  HPEZApproximator.hpp  MGARDApproximator.hpp  SZ2Approximator.hpp  SZ3Approximator.hpp  SZApproximator.hpp
include/PDR/Reconstructor/: ApproximationBasedReconstructor.hpp  GEReconstructor.hpp  Reconstructor.hpp  ReconstructorInterface.hpp  WeightedApproximationBasedReconstructor.hpp
include/PDR/Refactor/: ApproximationBasedRefactor.hpp  GERefactor.hpp  Refactor.hpp  RefactorInterface.hpp  TestApproximationBasedRefactor.hpp  WeightedApproximationBasedRefactor.hpp
prl_src/: CMakeLists.txt  paraGE_C.cpp  paraGE_Mach.cpp  paraGE_PT.cpp  paraGE_T.cpp  paraGE_Vtot.cpp  paraGE_mu.cpp  para_Vtot.cpp  para_refactor.cpp  para_refactor_d64.cpp  refactorROD.cpp  test_PT.cpp
test/: CMakeLists.txt  PMGARD_BP_T.cpp  PMGARD_BP_Vtot.cpp  PMGARD_BP_refactor.cpp  PMGARD_WBP_T.cpp  PMGARD_WBP_Vtot.cpp  PMGARD_WBP_refactor.cpp  generate_level_data.cpp  halfing_Vtot.cpp  nomask_Vtot.cpp  nomask_refactor.cpp  pdr_Dummy_BP_T.cpp  pdr_Dummy_BP_Vtot.cpp  pdr_Dummy_BP_refactor.cpp  pdr_Dummy_WBP_T.cpp  pdr_Dummy_WBP_Vtot.cpp  pdr_Dummy_WBP_refactor.cpp  pdr_SZ3_BP_T.cpp  pdr_SZ3_BP_Vtot.cpp  pdr_SZ3_BP_refactor.cpp  pdr_SZ3_WBP_T.cpp  pdr_SZ3_WBP_Vtot.cpp  pdr_SZ3_WBP_refactor.cpp  qoi_C.cpp  qoi_C_d64.cpp  qoi_Mach.cpp  qoi_Mach_d64.cpp  qoi_PT.cpp  qoi_PT_d64.cpp  qoi_T.cpp  qoi_T_d64.cpp  qoi_Vtot.cpp  qoi_Vtot2_d64.cpp  qoi_Vtot_d64.cpp  qoi_logx_d64.cpp  qoi_mu.cpp  qoi_mu_d64.cpp  qoi_xixj_d64.cpp  refactor.cpp  refactor_d64.cpp  (+29 more)
