# find_package(MPI REQUIRED)

function(add_my_executable target source)
    add_executable(${target} ${source})
    target_include_directories(${target} PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
    target_link_libraries(${target} ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB} MPI::MPI_CXX)
endfunction()

# add_my_executable(refactorROD refactorROD.cpp)
# add_my_executable(test_PT test_PT.cpp)
add_my_executable(para_refactor_d64 para_refactor_d64.cpp)
add_my_executable(paraGE_Vtot paraGE_Vtot.cpp)
add_my_executable(paraGE_T paraGE_T.cpp)
add_my_executable(paraGE_C paraGE_C.cpp)
add_my_executable(paraGE_Mach paraGE_Mach.cpp)
add_my_executable(paraGE_PT paraGE_PT.cpp)
add_my_executable(paraGE_mu paraGE_mu.cpp)
add_my_executable(para_refactor para_refactor.cpp)
add_my_executable(para_Vtot para_Vtot.cpp)
